# lightway

./: .gitignore  Cargo.toml  Earthfile  FLOX.md  FLOX_MIGRATION.md  Makefile.toml  README.md  build.bat  deny.toml  dev.sh  flake.nix
.flox/: env.json
.flox/env/: manifest.toml
.flox/scripts/: build.sh  dev.sh  run-tests.sh  setup-namespaces.sh
.github/workflows/: ci.yaml  nightly-cargo-deny.yaml  nightly-rust-update-check.yaml  nix-build.yaml  stale.yaml  weekly-cargo-update.yaml
docs/: README.md  client_offload_findings.md  connection_setting.md  connection_state_machine.md  design_overview.md  expresslane.md  faq.md  general_config.md  inside_packet_codec.md  logs_and_metrics.md  quick_start_guide.md  windows.md
lightway-app-utils/: Cargo.toml  build.rs
lightway-app-utils/examples/: udprelay.rs
lightway-app-utils/src/: args.rs  cmsg.rs  connection_ticker.rs  dplpmtud_timer.rs  encoding_req_retransmit_ticker.rs  iouring.rs  lib.rs  metrics.rs  network_change_monitor.rs  packet_codec.rs  raptor.rs  recvmsg_x.rs  sockopt.rs  tokio_raw_tun.rs  tun.rs
lightway-app-utils/src/args/: byte_size.rs  cipher.rs  config_format.rs  connection_type.rs  duration.rs  ip_map.rs  keyshare.rs  logging.rs  nonzero_duration.rs
lightway-app-utils/src/network_change_monitor/: addr_monitor.rs
lightway-app-utils/src/sockopt/: ip_mtu_discover.rs  udp_gro.rs
lightway-client/: Cargo.toml  build.rs  uniffi.toml
lightway-client/examples/: route_monitor.rs
lightway-client/src/: args.rs  ca_cert.pem  config.rs  dns_manager.rs  endpoint.rs  error.rs  event_handlers.rs  ideal_send_backlog.rs  io.rs  keepalive.rs  lib.rs  main.rs  mobile.rs  route_manager.rs  routing_table.rs  state.rs  wolfssl.rs
lightway-client/src/io/: inside.rs  outside.rs
lightway-client/src/io/inside/: mobile.rs  tun.rs
lightway-client/src/io/outside/: mobile.rs  tcp.rs  udp.rs  udp_batch_receiver.rs  ws_tcp.rs
lightway-client/src/io/outside/udp/: batch_receive.rs
lightway-client/src/macos/: dns_manager.rs
lightway-client/src/mobile/: lightway.rs  tracing_utils.rs
lightway-client/src/platform/: macos.rs  windows.rs
lightway-client/src/platform/android/: build.gradle.kts  local.properties  settings.gradle
lightway-client/src/platform/android/gradle/: libs.versions.toml
lightway-client/src/platform/android/lightway/: build.gradle.kts  consumer-rules.pro  lint.xml
lightway-client/src/platform/linux/: dns_manager.rs
lightway-client/src/platform/linux/dns_manager/: direct_file.rs  resolvconf.rs  resolvectl.rs
lightway-client/src/platform/macos/: dns_manager.rs  network_monitor.rs
lightway-client/src/platform/windows/: addr_monitor.rs  crypto.rs  dns_manager.rs  utils.rs
lightway-core/: Cargo.toml
lightway-core/fuzz/: Cargo.toml
lightway-core/src/: cipher.rs  connection.rs  context.rs  encoding_request_states.rs  gro.rs  gso.rs  io.rs  keyshare.rs  lib.rs  metrics.rs  packet.rs  packet_accumulator.rs  packet_codec.rs  plugin.rs  utils.rs  version.rs  wire.rs
lightway-core/src/connection/: builders.rs  dplpmtud.rs  event.rs  expresslane.rs  expresslane_cb.rs  fragment_map.rs  io_adapter.rs  key_update.rs
lightway-core/src/context/: server_auth.rs
lightway-core/src/tls/: mod.rs
lightway-core/src/wire/: auth_request.rs  auth_success_with_config_ipv4.rs  encoding_request.rs  encoding_response.rs  expresslane_config.rs  expresslane_data.rs  ping.rs  pong.rs  toggle_encoding.rs
lightway-core/tests/: connection.rs
lightway-core/tests/packet_codec/: mod.rs
lightway-man/: Cargo.toml
lightway-man/src/: main.rs
lightway-server/: Cargo.toml  build.rs
lightway-server/src/: args.rs  auth.rs  config.rs  connection.rs  connection_manager.rs  lib.rs  main.rs  metrics.rs  network_setup.rs  statistics.rs  wolfssl.rs
lightway-server/src/connection_manager/: connection_map.rs
lightway-server/src/io/: inside.rs  outside.rs
lightway-server/src/io/inside/: tun.rs
lightway-server/src/io/outside/: tcp.rs  udp.rs  ws_tcp.rs
lightway-server/src/io/outside/udp/: batch_receive.rs  cmsg.rs  send_queue.rs
lightway-server/src/ip_manager/: ip_pool.rs
nix/: default.nix  shell.nix
nix/modules/: checks.nix  common.nix  constants.nix  cross.nix  devshells.nix  native.nix
nix/pkgs/: cargo-ndk.nix
samples/: server_start.sh
tests/: Earthfile  setup.sh
tests/client/: Earthfile  client_config.parallel_connect.tcp.yaml  client_config.parallel_connect.udp.yaml  client_config.parallel_connect.yaml  client_config.yaml  docker-entrypoint.sh
tests/client/parallel_connect/: client_config.tcp.yaml  client_config.tcp_then_udp.yaml  client_config.udp.yaml  client_config.udp_then_tcp.yaml
tests/e2e/: Earthfile  run-parallel-connect-test.sh  run-with-compose-stack.sh
tests/server/: docker-entrypoint.sh  server_config.yaml
uniffi-bindgen/: Cargo.toml
ws/: README.md  setup.sh  uninstall.sh
ws/caddy/: Caddyfile  docker-compose.yml
ws/example/client/: config.yml
ws/example/server/: ca.crt  ca.key  config.yml  lwpasswd  server.crt  server.csr  server.key
ws/nginx/: docker-compose.yml  lightway-ws.conf
