[workspace]
members = [
    "lightway-core",
    "lightway-app-utils",
    "lightway-client",
    "lightway-server",
    "uniffi-bindgen",
]

exclude = [
    "lightway-core/fuzz",
]

resolver = "3"

[profile.release]
lto = true
debug = 1

[workspace.package]
repository = "https://github.com/expressvpn/lightway"
edition = "2024"
authors = ["lightway-developers@expressvpn.com"]
license = "AGPL-3.0-only"
rust-version = "1.89.0"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_unsafe = "deny"

[workspace.lints.clippy]
missing_safety_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bytes = "1.5.0"
bytesize = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
ctrlc = { version = "3.4.6", features = ["termination"] }
delegate = "0.12.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
ipnet = { version = "2.8.0", features = ["serde"]}
libc = "0.2.152"
lightway-app-utils = { path = "./lightway-app-utils" }
lightway-core = { path = "./lightway-core" }
metrics = "0.24.0"
more-asserts = "0.3.1"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
pnet_packet = { version = "0.35.0" }
pnet = { version = "0.35.0", default-features = false}
rand = "0.10.0"
regex = "1"
schemars = "1.2.1"
serde = "1.0.189"
serde-env = "0.3"
serde-saphyr = "0.0.22"
socket2 = "0.6.0"
struct-patch = "0.11.0"
test-case = "3.1.0"
thiserror = "2.0.3"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "fs"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tun-rs = { version = "2.5.1", features = ["async"] }
windows-sys = "0.61.0"
uniffi = "0.26.1"
