[package]
name = "lightway-client"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "lightway-client"
path = "src/main.rs"

[lib]
name = "lightway_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["postquantum"]
mobile = ["uniffi", "tracing-core", "tracing-panic"]
debug = ["lightway-core/debug","lightway-app-utils/debug"]
io-uring = ["lightway-app-utils/io-uring"]
postquantum = ["lightway-core/postquantum"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
ctrlc.workspace = true
educe.workspace = true
futures = "0.3.30"
libc.workspace = true
lightway-app-utils.workspace = true
lightway-core.workspace = true
pnet_packet.workspace = true
serde = { workspace = true, features = ["derive"] }
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tokio-util.workspace = true
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
twelf.workspace = true

# mobile feature
uniffi = { workspace = true, optional = true }
tracing-core = { version = "0.1.33", optional =true }
tracing-panic = { version = "0.1.2", optional= true }

[dev-dependencies]
more-asserts.workspace = true
test-case.workspace = true
tokio = { workspace = true, features = ["test-util"] }
serial_test = "3.2.0"
tun-rs.workspace = true
tempfile = "3.24.0"
mockall = "0.14.0"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[build-dependencies]
cfg_aliases = "0.2.1"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
route_manager = { version = "0.2.6", features = ["async"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.1"
objc2-system-configuration = "0.3.1"

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.2.0"
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
] }
