[package]
name = "lightway-man"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
clap_mangen = { workspace = true }
lightway-client = { path = "../lightway-client" }
lightway-server = { path = "../lightway-server" }
