[package]
name = "lightway-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
authors = ["lightway-developers@expressvpn.com"]
license = "AGPL-3.0-only"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
bytes = "1.5.0"
lightway-core = { path = "..", features = ["fuzzing_api"] }

[[bin]]
name = "fuzz_parse_header"
path = "fuzz_targets/fuzz_parse_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_frame"
path = "fuzz_targets/fuzz_parse_frame.rs"
test = false
doc = false

[target.'cfg(not(target_env = "musl"))'.dependencies]
libfuzzer-sys = "0.4"
